partial refactor in regard to fhirMapping